# otus6

./: CMakeLists.txt  README.md  bulk.cpp  bulk.h  main.cpp  response_handler.h  test_bulk.cpp
.github/workflows/: release.yml
